--- a/angular.json
+++ b/angular.json
@@ -13,16 +13,15 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
-            "outputPath": "dist/ng-tailadmin",
+            "outputPath": {
+              "base": "dist",
+              "browser": ""
+            },
+            "prerender": false,
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
-            "allowedCommonJsDependencies": [
-               "prismjs",
-               "polylabel"
-            ],
+            "polyfills": ["zone.js"],
+            "allowedCommonJsDependencies": ["prismjs", "polylabel"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -30,15 +29,13 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ],
-            "scripts": [
-              "node_modules/apexcharts/dist/apexcharts.min.js"
-            ]
+            "styles": ["src/styles.css"],
+            "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"]
           },
           "configurations": {
             "production": {
+              "baseHref": "/patronesDSG/",
+              "extractLicenses": false,
               "budgets": [
                 {
                   "type": "initial",
@@ -79,10 +76,7 @@
         "test": {
           "builder": "@angular/build:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               {
@@ -90,9 +84,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "styles": ["src/styles.css"],
             "scripts": []
           }
         }
